Refactored header (not fixed for responsive mobile yet).

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
 	</head>
 	<body>
 		<a href='#content' id='skip-nav'>Skip navigation.</a>
-		<div id='badge'><img alt='' src='images/icons/chat2.svg'></div>
 		<div id='icon-bar'>
 			<a href='blog.html'><img alt='' src='images/icons/page.svg'><div>blog</div></a>
 			<a href='gallery.html'><img alt='' src='images/icons/work.svg'><div>gallery</div></a>
@@ -17,7 +16,10 @@
 			<a href='rss.xml'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
 		</div>
 		<div id='content-holder'>
-			<h1><img alt='contact' src='images/text-contact.png'></h1>
+			<h1>
+				<div id='badge'><img alt='' src='images/icons/chat2.svg'></div>
+				<img alt='contact' src='images/text-contact.png'>
+			</h1>
 			<a name='content'></a>
 			<div id='content-pane'>
 				You can reach me at d@ddr0.com, on Github as DDR0, or on Discord as DDR#0001.
