--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,6 @@
 	</head>
 	<body>
 		<a href='#content' id='skip-nav'>Skip navigation.</a>
-		<div id='badge'><img alt='' src='images/icons/work.svg'></div>
 		<div id='icon-bar'>
 			<a href='blog.html'><img alt='' src='images/icons/page.svg'><div>blog</div></a>
 			<a href='gallery.html'><img alt='' src='images/icons/work.svg'><div>gallery</div></a>
@@ -18,7 +17,10 @@
 			<a href='rss.xml'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
 		</div>
 		<div id='content-holder'>
-			<h1><img alt='gallery' src='images/text-gallery.png'></h1>
+			<h1>
+				<div id='badge'><img alt='' src='images/icons/work.svg'></div>
+				<img alt='gallery' src='images/text-gallery.png'>
+			</h1>
 			<a name='content'></a>
 			<div id='content-pane'>
 				<!-- // FROGATTO /// -->
@@ -90,7 +92,7 @@
 				<div style='min-height:262.5px;'>
 					<a href="https://ddr0.github.io/side%20projects/canvasgame.html"><img class="cover right" style="width:176.5px;" src="images/gallery/html game.gif"></a>
 					<h2>canvasgame</h2>
-					<p><a href="https://ddr0.github.io/side%20projects/canvasgame.html">canvasgame</a> is a demo two-player game, written in Javascript. Controls: a/e to move and o to fire missile for player 1, numpad 4/6 to move and 5 to fire area bomb for player 2. I made the game in one day to learn.</p>
+					<p><a href="https://ddr0.github.io/side%20projects/canvasgame.html">canvasgame</a> is a demo two-player game, written in Javascript. It was written in one day to learn how to make an HTML5 game. Controls: a/e to move and o to fire missile for player 1, numpad 4/6 to move and 5 to fire area bomb for player 2.</p>
 				</div>
 				<hr>
 				<p>
