--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,6 @@
 	</head>
 	<body>
 		<a href='#content' id='skip-nav'>Skip navigation.</a>
-		<div id='badge'><img alt='' src='images/icons/page.svg'></div>
 		<div id='icon-bar'>
 			<a href='blog.html'><img alt='' src='images/icons/page.svg'><div>blog</div></a>
 			<a href='gallery.html'><img alt='' src='images/icons/work.svg'><div>gallery</div></a>
@@ -18,7 +17,10 @@
 			<a href='rss.xml'><img alt='' src='images/icons/rss.svg'><div>rss</div></a>
 		</div>
 		<div id='content-holder'>
-			<h1><img alt='blog' src='images/text-blog.png'></h1>
+			<h1>
+				<div id='badge'><img alt='' src='images/icons/page.svg'></div>
+				<img alt='blog' src='images/text-blog.png'>
+			</h1>
 			<a name='content'></a>
 			<div id='content-pane'>
 				<h2 id="CSP">Web Security: Should <a href="https://developer.mozilla.org/en/docs/Web/Security/CSP">CSP</a> be set for my HTML files only, or my HTML files and all my assets?</h2>
