Added separate pages for blog posts, for perma-links.
	- Navigation still DNE, however.
	- Tags are broken.

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>Contact</title>
-		<link href='css/grey-and-blue.css' rel='stylesheet'>
+		<link href='/css/grey-and-blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
 		
 	</head>
@@ -11,13 +11,13 @@
 		<a href='#content' id='skip-nav'>skip nav</a>
 		<div id='content-holder'>
 			<div id="content-header">
-				<div id='badge'><img alt='' src='images/icons/chat2.svg'></div>
-				<h1><img alt='contact' src='images/text-contact.png'></h1>
+				<div id='badge'><img alt='' src='/images/icons/chat2.svg'></div>
+				<h1><img alt='contact' src='/images/text-contact.png'></h1>
 				<div id='icon-bar'>
-					<a href='blog.html'    ><img src='images/icons/page.svg' ><span>blog</span></a>
-					<a href='gallery.html' ><img src='images/icons/work.svg' ><span>gallery</span></a>
-					<a href='contact.html' class='selected'><img src='images/icons/chat2.svg'><span>contact</span></a>
-					<a href='rss.xml'                                                               ><img src='images/icons/rss.svg'  ><span>rss</span></a>
+					<a href='/blog.html'    ><img src='/images/icons/page.svg' ><span>blog</span></a>
+					<a href='/gallery.html' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
+					<a href='/contact.html' class='selected'><img src='/images/icons/chat2.svg'><span>contact</span></a>
+					<a href='/rss.xml'                                                               ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
 				</div>
 			</div>
 			<a name='content'></a>
@@ -26,5 +26,5 @@
 			</div>
 		</div>
 	</body>
-	<footer>Site ©2020 David Roberts.</footer>
+	<footer>Site ©2020 DDR.</footer>
 </html>
