--- a/blog-posts/tags.html
+++ b/blog-posts/tags.html
@@ -2,17 +2,17 @@
 <html lang='en'>
 	<head>
 		<meta charset='utf-8'>
-		<title>Gallery</title>
+		<title>Tags</title>
 		<link href='/css/grey-and-blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
-		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/gallery-rss-feed.xml" />
+		
 	</head>
 	<body>
 		<a href='#content' id='skip-nav'>skip nav</a>
 		<div id='content-holder'>
 			<div id="content-header">
-				<div id='badge'><img alt='' src='images/icons/work.svg'></div>
-				<h1><img alt='gallery' src='images/text-gallery.png'></h1>
+				<div id='badge'><img alt='' src='images/icons/page.svg'></div>
+				<h1><img alt='blog' src='images/text-blog.png'></h1>
 				<div id='icon-bar'>
 					<a href='/blog.html'    ><img src='/images/icons/page.svg' ><span>blog</span></a>
 					<a href='/gallery.html' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
@@ -22,19 +22,12 @@
 			</div>
 			<a name='content'></a>
 			<div id='content-pane'>
-				<!-- Nothing here, let the background show through! -->
-				
-				<script src='https://code.jquery.com/jquery-2.0.0.min.js'></script>
+				<h2>Tags</h2>
+					<code>
+								{}
+					</code>
 			</div>
 		</div>
-		<footer> 
-			Site ©2020 David Roberts.
-			<a href='#' onclick='window.city.toggleVisibility()' style='float: right; margin-right: 20%;'>
-				<img src='images/easter-egg pull.svg'>
-			</a>
-			<canvas height='0' id='background-city' width='0'></canvas>
-			<script src='https://code.createjs.com/preloadjs-0.3.0.min.js'></script>
-			<script src='background-town/setup.js'></script>
-		</footer>
 	</body>
+	<footer>Site ©2020 DDR.</footer>
 </html>
