--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>Gallery</title>
-		<link href='css/grey-and-blue.css' rel='stylesheet'>
+		<link href='/css/grey-and-blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
 		<link href='css/gallery.css' rel='stylesheet'>
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/gallery-rss-feed.xml" />
@@ -15,10 +15,10 @@
 				<div id='badge'><img alt='' src='images/icons/work.svg'></div>
 				<h1><img alt='gallery' src='images/text-gallery.png'></h1>
 				<div id='icon-bar'>
-					<a href='blog.html'    ><img src='images/icons/page.svg' ><span>blog</span></a>
-					<a href='gallery.html' class='selected'><img src='images/icons/work.svg' ><span>gallery</span></a>
-					<a href='contact.html' ><img src='images/icons/chat2.svg'><span>contact</span></a>
-					<a href='rss.xml'                                                               ><img src='images/icons/rss.svg'  ><span>rss</span></a>
+					<a href='/blog.html'    ><img src='/images/icons/page.svg' ><span>blog</span></a>
+					<a href='/gallery.html' class='selected'><img src='/images/icons/work.svg' ><span>gallery</span></a>
+					<a href='/contact.html' ><img src='/images/icons/chat2.svg'><span>contact</span></a>
+					<a href='/rss.xml'                                                               ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
 				</div>
 			</div>
 			<a name='content'></a>
