Removed a few references to ddr0.github.io.

--- a/blog-posts/07.Wacom_for_Hearthstone.html
+++ b/blog-posts/07.Wacom_for_Hearthstone.html
@@ -33,7 +33,7 @@
 					<li><a href="https://www.reddit.com/r/hearthstone/comments/4843fc/wacom_tablet_not_working_on_hearthstone/">Wacom Tablet not working on Hearthstone</a></li>
 				</ol>
 				
-				<p><a href="https://ahkscript.org/">AutoHotKey</a> for Windows has no such issues. And it can send mouse inputs that hearthstone can read… <img class="emote" src="https://ddr0.github.io/images/wesnoth%20icons/icon_pensive.gif"> So, we'll make a new AutoHotKey script that clicks the left mouse button when the left mouse button is clicked. After installing AHK, make a new file with Notepad called wacom_echoer.ahk with the following contents:</p>
+				<p><a href="https://ahkscript.org/">AutoHotKey</a> for Windows has no such issues. And it can send mouse inputs that hearthstone can read… <img class="emote" src="/images/wesnoth%20icons/icon_pensive.gif"> So, we'll make a new AutoHotKey script that clicks the left mouse button when the left mouse button is clicked. After installing AHK, make a new file with Notepad called wacom_echoer.ahk with the following contents:</p>
 				
 				<!-- Code tag on each line because each line gets padded later in the compiling process too. -->
 				<div class="code-container">
