Updated Cube Trains subsite to use HTTPS. (This fixes main page Youtube.)

--- a/cube trains/download linux.html
+++ b/cube trains/download linux.html
@@ -9,7 +9,7 @@
 	</head>
 	<body onLoad="mixpanel.track('download lin load');">
 		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
+			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src='https://api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
 			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
 			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
 			mixpanel.track_links("a#deb-download",			"deb download",				{'referrer': document.referrer });
@@ -25,7 +25,7 @@
 			<p>There is an installation script of sorts available for ubuntu 12.04.1 LTS. It may work with newer versions of Ubuntu, or other Ubuntu-like flavours of Linux. To install the game, run install.sh and follow the prompts. This download includes the source code, so in the event that the installer fails the game can still be compiled by hand.</p>
 			<p><strong>The editor has been disabled</strong> for Linux due to the copy/paste feature not working.</p>
 			<div class="buttonContainer">
-				<a id="lin-make-download" class="shinyButton" href="http://ddr0.github.com/files/release/linux/ct-1.0.0 Ubuntu 12.04.1 LTS.tar.gz">ct-1.0.0 installer</a>
+				<a id="lin-make-download" class="shinyButton" href="https://ddr0.ca/files/release/linux/ct-1.0.0 Ubuntu 12.04.1 LTS.tar.gz">ct-1.0.0 installer</a>
 				<p class="buttonSubtext">Installer for Ubuntu<br>12.04.1 LTS</p>
 			</div>
 			<div style="clear: both;"></div>
