--- a/cube trains/index.html
+++ b/cube trains/index.html
@@ -7,24 +7,24 @@
 		<link rel="stylesheet" type="text/css" href="css/black.css">
 		<meta property="og:title" content="Cube Trains" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="http://cubetrains.com" />
+		<meta property="og:url" content="https://ddr0.ca/cube trains" />
 		<meta property="og:description" content="Cube Trains is a free puzzle game where you build elevated railways in a city. It features 3D puzzles and an editor. Open source." />
-		<meta property="og:image" content="http://cubetrains.com/images/screenshot%20gallery/snapshot12.jpeg" />
+		<meta property="og:image" content="https://ddr0.ca/cube trains/images/screenshot%20gallery/snapshot12.jpeg" />
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:image:width" content="808" />
 		<meta property="og:image:height" content="626" />
-		<meta property="og:image" content="http://cubetrains.com/images/screenshot%20gallery/snapshot11.jpeg" />
+		<meta property="og:image" content="https://ddr0.ca/cube trains/images/screenshot%20gallery/snapshot11.jpeg" />
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:image:width" content="808" />
 		<meta property="og:image:height" content="626" />
-		<meta property="og:image" content="http://cubetrains.com/images/ct-logo-tiny.png" />
+		<meta property="og:image" content="https://ddr0.ca/cube trains/images/ct-logo-tiny.png" />
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="250" />
 		<meta property="og:image:height" content="250" />
 	</head>
 	<body onLoad="mixpanel.track('index load');">
 		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
+			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src='https//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
 			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
 			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
 			mixpanel.track_links("a#source-download",		"source download",			{'referrer': document.referrer });
@@ -47,7 +47,7 @@
 				<p class="buttonSubtext">version 1.0.0</p>
 			</div>
 			<div class="buttonContainer">
-				<a class="shinyButton" id="mac-download" href="http://ddr0.github.com/files/release/mac/Cube Trains 1.0.0.zip">Macintosh</a>
+				<a class="shinyButton" id="mac-download" href="https://ddr0.ca/files/release/mac/Cube Trains 1.0.0.zip">Macintosh</a>
 				<p class="buttonSubtext">version 1.0.0</p>
 			</div>
 			<div class="buttonContainer">
@@ -70,7 +70,7 @@
 				<input type="number" name="amount" value="2.00" min="2" step="any" oninput="if((parseInt(this.value) < 2 || parseInt(this.value) != parseInt(this.value)) && this.value != '') {this.value='2.00'}" onblur="if((parseInt(this.value) < 2 || parseInt(this.value) != parseInt(this.value))) {this.value='2.00'}">
 				<input type="hidden" name="currency_code" value="CAD">
 				<p class="buttonSubtext" style="margin:3px;">Payment amount, in Canadian Dollars. $2.00 minimum, please. Tips appreciated.</p>
-				<input type="hidden" name="return" value="http://ddr0.github.io/cube%20trains/download%20expansion%201.html">
+				<input type="hidden" name="return" value="https://ddr0.ca/cube%20trains/download%20expansion%201.html">
 				<input type="hidden" name="button_subtype" value="services">
 				<input type="hidden" name="bn" value="PP-BuyNowBF:btn_buynow_LG.gif:NonHosted">
 				<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
@@ -81,12 +81,12 @@
 			
 
 			<h2>Media</h2>
-			<iframe width="100%" height="315" src="http://www.youtube.com/embed/zWdzu8BNZMw?list=PL5845FD4D684EB568&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
-			<p>A short LP in German: <a href="http://www.youtube.com/watch?v=66c_g69f-6I">Angespielt: Cube Trains</a></p>
+			<iframe width="100%" height="315" src="https://www.youtube.com/embed/zWdzu8BNZMw?list=PL5845FD4D684EB568&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
+			<p>A short LP in German: <a href="https://www.youtube.com/watch?v=66c_g69f-6I">Angespielt: Cube Trains</a></p>
 			<p><a href="media.html">Screenshots and OST</a> are also available.</p>
 			<h2><a name="Contact"></a>Contact</h2>
 			<p>Cube Trains does not collect personally identifying data, nor data that could be turned into personally identifying data. <!--Usage data from the game is truly anonymous. In addition, stats reporting can be turned off with the command-line option "--no-send-stats", but I like getting stats. They're fun.--></p>
-			<p id="proper">If you'd like to make yourself known, please post on the <a href="http://www.frogatto.com/forum">Cube Trains Forums</a>. You can also <a href="mailto:robertsdavidddr@gmail.com">email</a> me, the programmer, or contact <a href="irc://freenode/DDR,isnick">me</a> via <a href="http://en.wikipedia.org/wiki/Irc">IRC</a> on <a href="irc://freenode/cubetrains">#cubetrains</a>. If you have a problem, I want to hear about it so I can fix it! Feedback is always welcome - I like to talk about my stuff!</p>
+			<p id="proper">If you'd like to make yourself known, please post on the <a href="https://www.frogatto.com/forum">Cube Trains Forums</a>. You can also <a href="mailto:robertsdavidddr@gmail.com">email</a> me, the programmer, or contact <a href="irc://freenode/DDR,isnick">me</a> via <a href="https://en.wikipedia.org/wiki/Irc">IRC</a> on <a href="irc://freenode/cubetrains">#cubetrains</a>. If you have a problem, I want to hear about it so I can fix it! Feedback is always welcome - I like to talk about my stuff!</p>
 			<h2><a name="Credits"></a>Credits</h2>
 			<ul>
 				<li>Developer: David D. Roberts (DDR)</li>
