--- a/cube trains/media.html
+++ b/cube trains/media.html
@@ -6,39 +6,39 @@
 		<link rel="shortcut icon" href="images/favicon.png">
 		<link rel="stylesheet" type="text/css" href="css/black.css">
 		<link rel="stylesheet" type="text/css" href="css/gallery.css">
-		<meta property="og:title" content="Cube Trains (Screenshots)" />
+		<meta property="og:title" content="Cube Trains Screenshots" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="http://cubetrains.com" />
+		<meta property="og:url" content="https://ddr0.ca/cube trains" />
 		<meta property="og:description" content="The Cube Trains screenshot gallery. Cube Trains is a free puzzle game where you build elevated railways in a city. It features 3D puzzles and an editor." />
-		<meta property="og:image" content="http://cubetrains.com/images/screenshot%20gallery/snapshot12.jpeg" />
+		<meta property="og:image" content="https://ddr0.ca/cube trains/images/screenshot%20gallery/snapshot12.jpeg" />
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:image:width" content="808" />
 		<meta property="og:image:height" content="626" />
-		<meta property="og:image" content="http://cubetrains.com/images/screenshot%20gallery/snapshot11.jpeg" />
+		<meta property="og:image" content="https://ddr0.ca/cube trains/images/screenshot%20gallery/snapshot11.jpeg" />
 		<meta property="og:image:type" content="image/jpeg" />
 		<meta property="og:image:width" content="808" />
 		<meta property="og:image:height" content="626" />
-		<meta property="og:image" content="http://cubetrains.com/images/ct-logo-tiny.png" />
+		<meta property="og:image" content="https://ddr0.ca/cube trains/images/ct-logo-tiny.png" />
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="250" />
 		<meta property="og:image:height" content="250" />
 	</head>
 	<body onLoad="mixpanel.track('media load')">
 		<script type="text/javascript"> //start Mixpanel
-			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===d.location.protocol?"https:":"http:")+'//api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
+			(function(d,c){var a,b,g,e;a=d.createElement("script");a.type="text/javascript";a.async=!0;a.src='https://api.mixpanel.com/site_media/js/api/mixpanel.2.js';b=d.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b);c._i=[];c.init=function(a,d,f){var b=c;"undefined"!==typeof f?b=c[f]=[]:f="mixpanel";g="disable track track_pageview track_links track_forms register register_once unregister identify name_tag set_config".split(" ");
 			for(e=0;e<g.length;e++)(function(a){b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,0)))}})(g[e]);c._i.push([a,d,f])};window.mixpanel=c})(document,[]);
 			mixpanel.init("fa690803d8c9479ed96635dd52ea1837");
 		</script> <!-- end Mixpanel -->
 		<div id="body">
 			<h1>MEDIA</h1>
 			<p style="text-align: center;">•  <a href="index.html">Main Page</a>  •  <a href="index.html#Downloads">Download</a>  •  <a href="index.html#Credits">Credits</a>  •<p>
+			
 			<!-- <h2>Videos</h2>
 			<p>Newest videos first. View on youtube for larger HD version.</p>
-			<iframe height=300 src="http://www.youtube.com/embed/videoseries?list=PL5845FD4D684EB568&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
+			<iframe height=300 src="https://www.youtube.com/embed/videoseries?list=PL5845FD4D684EB568&amp;hl=en_US" frameborder="0" allowfullscreen></iframe>
 			<p>Also of interest: <a href="https://vimeo.com/48185072">Live Image Reloading with Cube Trains</a></p> -->
-			<h2>Music</h2>
-			<iframe height="60" scrolling="no" frameborder="0" src="http://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F66068262&amp;auto_play=false&amp;show_artwork=false&amp;color=2b2b2b"></iframe>
-			<h2>Pictures</h2>
+			
+			<h2>Screenshots</h2>
 			<p>Newer pictures are nearer the top. Click to enlarge. Not all the pictures are from current version.</p>
 			<div id="gallery">
 				<div>
@@ -71,6 +71,9 @@
 				</div>
 			</div>
 			<div style="clear: both;"></div>
+			
+			<h2>Music</h2>
+			<iframe height="120" scrolling="no" frameborder="0" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F66068262&amp;auto_play=false&amp;show_artwork=false&amp;color=2b2b2b"></iframe>
 		</div>
 	</body>
 </html>
