--- a/🎲/index.html
+++ b/🎲/index.html
@@ -74,8 +74,9 @@
 						console.error(err)
 					}
 					
-					//Good, the roll appears to have worked. Clear the input.
+					//Good, the roll appears to have worked. Clear the input and focus for next roll.
 					$('#roll').value = ''
+					$('#roll').focus()
 				})
 			})
 		</script>
@@ -126,6 +127,7 @@
 			form > *:nth-child(3) { grid-row: 2; grid-column: 1; }
 			form > *:nth-child(4) { grid-row: 2; grid-column: 2; }
 			form > *:nth-child(5) { grid-row: 2; grid-column: 3; }
+			form > *:nth-child(6) { grid-row: 3; grid-column: 2; }
 			
 			form label {
 				text-align: right;
@@ -138,6 +140,10 @@
 			}
 			form > button {
 				width: 8ch;
+			}
+			form > p {
+				margin-top: -3px;
+				font-size: 80%;
 			}
 			
 			#app {
@@ -179,15 +185,15 @@
 		<div id=app>
 			<form id=roll-entry>
 				<label for=name>Character Name:</label> <input id=name>
-				<label for=roll>Roll:</label> <input id=roll placeholder="1d20+2 to hit" disabled>
+				<label for=roll>Roll:</label> <input id=roll disabled>
 				<button disabled>roll</button>
+				<p>(eg.; <code>2d10 + 1 to hit</code>)</p>
 			</form>
 			<output for=roll-entry role="log" aria-relevant="additions">
 				<ul>
 					<!-- rolls go here -->
 				</ul>
 			</output>
-			<p>Syntax: Like "<code>5d10 + 2 to hit</code>". Dice, modifier, comment.</p>
 		</div>
 		<div id=status>
 			<div>Status: <span>loading…</span></div>
