Added versioned link to roller. (a one-die)

--- a/gallery.html
+++ b/gallery.html
@@ -98,8 +98,9 @@
 				<p>
 					Minor Links:
 					<ol>
-						<li>money calculator: <a href="https://ddr0.github.io/side%20projects/%24%E2%8C%9A.html">https://ddr0.github.io/side projects/$⌚.html</a></li>
-						<li>light painting tool: <a href="https://ddr0.github.io/side%20projects/colour.html">https://ddr0.github.io/side projects/colour.html</a></li>
+						<li>money calculator: <a href="https://ddr0.ca/side%20projects/%24%E2%8C%9A.html">https://ddr0.ca/side projects/$⌚.html</a></li>
+						<li>light painting tool: <a href="https://ddr0.ca/side%20projects/colour.html">https://ddr0.ca/side projects/colour.html</a></li>
+						<li>accessible DnD dice roller: <a href="https://ddr0.ca/%F0%9F%8E%B2">https://ddr0.ca/🎲</a></li>
 					</ol>
 				</p>
 				<p>Questions? Comments? I like <a href="contact.html">hearing</a> from people.</p>
