Fixed up dice client and server so they actually work now.

--- a/gallery.html
+++ b/gallery.html
@@ -98,9 +98,17 @@
 				<p>
 					Minor Links:
 					<ol>
-						<li>money calculator: <a href="https://ddr0.ca/side%20projects/%24%E2%8C%9A.html">https://ddr0.ca/side projects/$⌚.html</a></li>
-						<li>light painting tool: <a href="https://ddr0.ca/side%20projects/colour.html">https://ddr0.ca/side projects/colour.html</a></li>
-						<li>accessible DnD dice roller: <a href="https://ddr0.ca/%F0%9F%8E%B2">https://ddr0.ca/🎲</a></li>
+						<li>
+							<a href="/side%20projects/%24%E2%8C%9A.html">money calculator</a>
+						</li>
+						<li>
+							<a href="/side%20projects/colour.html">light painting tool</a>
+						</li>
+						<li>
+							<a href="/%F0%9F%8E%B2">accessible DnD dice roller</a>
+							(<a href="/%E2%9A%80">v⚀</a>,
+							 <a href="/%E2%9A%81">v⚁</a>)
+						</li>
 					</ol>
 				</p>
 				<p>Questions? Comments? I like <a href="contact.html">hearing</a> from people.</p>
