--- a/⚀/index.html
+++ b/⚀/index.html
@@ -284,7 +284,7 @@
 		</div>
 		<div id=status>
 			<div>Status: <span>loading…</span></div>
-			<p>Based on <a href="https://www.npmjs.com/~edloidas">edloidas</a>' <a href="https://www.npmjs.com/package/roll-parser">roll parser</a>. ❤</p>
+			<p>Based on <a href="https://www.npmjs.com/~edloidas">edloidas</a>' <a href="https://www.npmjs.com/package/roll-parser">roll parser</a>.</p>
 		</div>
 	</body>
 </html>
