Cleaned up resume links.

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,9 @@
 			</div>
 			<a name='content'></a>
 			<div id='content-pane'>
-				You can reach me at d@ddr0.com, on Github as DDR0, or on Discord as DDR#0001.
+				<p>You can reach me at d@ddr0.com, on Github as DDR0, or on Discord as DDR#0001.</p>
+					
+					<p>See also: <a href="/files/personal/resume.pdf">my resume</a>.</p>
 			</div>
 		</div>
 	</body>
