Added link to fuseblk-filename-fixer.

--- a/gallery.html
+++ b/gallery.html
@@ -125,7 +125,8 @@
 					<ol>
 						<li>money calculator: <a href="/side%20projects/%24%E2%8C%9A.html">$⌚.html</a></li>
 						<li>light painting tool: <a href="/side%20projects/colour.html">colour.html</a></li>
-						<li>accessible D&D dice roller: <a href="/d">d</a> or <a href="/🎲">🎲</a>. (Version history: <a href="/⚀">⚀</a>, <a href="/⚁">⚁</a>, <a href="/⚂">⚂</a>.)</li>
+						<li>accessible D&D dice roller: <a href="/🎲">🎲</a> or <a href="/d">d</a>. (Version history: <a href="/⚀">⚀</a>, <a href="/⚁">⚁</a>, <a href="/⚂">⚂</a>.)</li>
+						<li><a href="https://github.com/DDR0/fuseblk-filename-fixer">fuseblk filename fixer</a>: Fix file copy issues from Linux to Windows partitions.</li>
 					</ol>
 					
 					See also: <a href="/files/personal/resume.pdf">my resume</a>.
