Added IntelliCross crosswalk app demos link to gallery.

--- a/gallery.html
+++ b/gallery.html
@@ -127,6 +127,7 @@
 						<li>light painting tool: <a href="/side%20projects/colour.html">colour.html</a></li>
 						<li>accessible D&D dice roller: <a href="/🎲">🎲</a> or <a href="/d">d</a>. (Version history: <a href="/⚀">⚀</a>, <a href="/⚁">⚁</a>, <a href="/⚂">⚂</a>.)</li>
 						<li><a href="https://github.com/DDR0/fuseblk-filename-fixer">fuseblk filename fixer</a>: Fix file copy issues from Linux to Windows partitions.</li>
+						<li><a href="/side%20projects/IntelliCross%20Demos/">crosswalk app demo screens</a>: Demo screens for a crosswalk configuration tool.</li>
 					</ol>
 					
 					See also: <a href="/files/personal/resume.pdf">my resume</a>.
